# ask-seattle

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: secret-scan.yml
data/seed/: askseattle_seed.jsonl  askseattle_synthetic.jsonl
docs/: architecture.md  developer_notes.md  development.md  index.md  labeling_policy.md  model_plan.md
docs/explanation/: model-and-thresholds.md
docs/how-to/: label-posts.md  remote-wsl-training.md  retrain.md  runpod-training.md  troubleshoot.md
docs/reference/: bridge-api.md  cli.md  data-format.md
scripts/: generate_synthetic_seed_data.py  run_remote_training.sh  runpod_pod_bootstrap.sh  runpod_train.py
src/ask_seattle/: __init__.py  cli.py  data.py  decision_log.py  hybrid_policy.py  local_bridge.py  model.py  moderation.py  reddit_data.py  reddit_stream.py  runpod.py  secret_scan.py  training.py  transformer_model.py
tests/: test_data.py  test_hybrid_policy.py  test_local_bridge.py  test_model_selection.py  test_moderation.py  test_reddit_workflows.py  test_runpod.py  test_secret_scan.py  test_stacked_transformer_decider.py  test_training.py  test_transformer_presets.py
userscripts/: ask-seattle-reddit-helper.user.js
